# opyrator

./: CONTRIBUTING.md  LICENSE  Pipfile  README.md  build.py  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: 01_bug-report.md  02_feature-request.md  03_documentation.md  04_a_deployment-problem.md  04_b_usage-problem.md  05_other.md
.github/actions/build-environment/: Dockerfile  (+1 more)
.github/workflows/: build-pipeline.yml  codeql.yml  release-pipeline.yml
docs/: .pages  README.md  opyrator.api.fastapi_app.md  opyrator.api.fastapi_utils.md  opyrator.api.md  opyrator.components.md  opyrator.components.outputs.md  opyrator.components.types.md  opyrator.core.md  opyrator.export.md  opyrator.tasks.md  opyrator.ui.md  opyrator.ui.schema_utils.md  opyrator.ui.streamlit_ui.md  opyrator.ui.streamlit_utils.md  opyrator.utils.md
docs/openapi-demo-specs/: detect-language-openapi-spec.json  generate-text-openapi-spec.json  hello-world-openapi-spec.json  image-super-resolution-openapi-spec.json  named-entity-recognition-openapi-spec.json  preprocess-text-openapi-spec.json  question-answering-openapi-spec.json  separate-audio-openapi-spec.json  seperate-audio-openapi-spec.json  showcase-components-openapi-spec.json  train-word-vectors-openapi-spec.json
examples/: hello_world.py  playground_app.py
examples/audio_seperation/: app.py
examples/components_demo/: app.py
examples/detect_language/: app.py  requirements.txt
examples/generate_text/: app.py  requirements.txt
examples/hello_world/: app.py  requirements.txt
examples/image_super_resolution/: app.py  requirements.txt
examples/language_detection/: app.py  requirements.txt
examples/named_entity_recognition/: app.py  requirements.txt
examples/preprocess_text/: app.py  requirements.txt
examples/question_answering/: app.py  requirements.txt
examples/separate_audio/: app.py  requirements.txt
examples/seperate_audio/: requirements.txt
examples/showcase_components/: app.py
examples/text_explainer/: app.py  requirements.txt
examples/text_generation/: app.py  requirements.txt
examples/train_word_vectors/: app.py  requirements.txt
playground/: .dockerignore  .gitignore  Dockerfile  build.py
playground/resources/: 5xx.html  playground_app.py
src/opyrator/: __init__.py  _about.py  _cli.py  core.py  export.py
tests/: test_cli.py
(+22 files in other folders)
