# Support for PEP 517
# https://setuptools.readthedocs.io/en/latest/setuptools.html#setup-cfg-only-projects
[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]

[tool.black]
exclude = '''
(
    \.egg
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.nox
  | \.venv
  | _build
  | build
  | dist
  | setup.py
)
'''
line-length = 88
target-version = ['py36', 'py37', 'py38']
