[metadata]
description-file = README.md
license_files = LICENSE

[bdist_wheel]
universal = false

[flake8]
ignore =
    E203,  # space before : (needed for how black formats slicing)
    # E266,  # too many leading '#' for block comment
    E501,  # line too long
    E731,  # do not assign a lambda expression, use a def
    W503,  # line break before binary operator
max-line-length = 88
# select = B,C,E,F,W,T4,B9
# max-complexity = 18
exclude =
    .env,
    .git,
    .eggs,
    __pycache__,
    build,
    dist,
    venv,
    .ipynb_checkpoints,
    __init__.py
docstring-convention = google

[mypy]
python_version = 3.6
ignore_missing_imports = True
disallow_untyped_defs = True
# html_report=mypyhtml
# follow_imports = skip

[isort]
#profile=black
# https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
known_first_party =
    template_package
    tests

[pylint]
max-line-length = 88

[pylint.messages_control]
disable = C0330, C0326

[pydocstyle]
convention = google
# D100: Missing docstring in public module
# D101: Missing docstring in public class
# D102: Missing docstring in public method
# D103: Missing docstring in public function
# D104: Missing docstring in public package
# D105: Missing docstring in magic method
# D107: Missing docstring in __init__
# D202: No blank lines allowed after function docstring
add_ignore = D100,D101,D102,D103,D104,D105,D107,D202

[coverage:run]
source=src/*
omit=tests/*

[tool:pytest]
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
testpaths = tests
addopts = -s
# --cov=src --cov-append --cov-config=setup.cfg --cov-report=xml --cov-report term --cov-report=html
